DevTools: get frame name from frame tree, not owner element

Bug: 823579
Change-Id: I05cc69fc17b4195a1404583ca6635b9fd0888eb7
Reviewed-on: https://chromium-review.googlesource.com/993972
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547858}
Former-commit-id: cae175987c1f842d1f232f9f23d8615611ba4747