third_party/WebKit/Source/core/inspector/InspectorPageAgent.cpp
@@ -937,15 +937,13 @@ std::unique_ptr<protocol::Page::Frame> InspectorPageAgent::BuildObjectForFrame(
           .setSecurityOrigin(SecurityOrigin::Create(url)->ToRawString())
           .build();
   Frame* parent_frame = frame->Tree().Parent();
-  if (parent_frame)
+  if (parent_frame) {
     frame_object->setParentId(IdentifiersFactory::FrameId(parent_frame));
-  if (frame->DeprecatedLocalOwner()) {
-    AtomicString name = frame->DeprecatedLocalOwner()->GetNameAttribute();
-    if (name.IsEmpty())
+    AtomicString name = frame->Tree().GetName();
+    if (name.IsEmpty() && frame->DeprecatedLocalOwner())
       name = frame->DeprecatedLocalOwner()->getAttribute(HTMLNames::idAttr);
     frame_object->setName(name);
   }
-
   if (loader && !loader->UnreachableURL().IsEmpty())
     frame_object->setUnreachableUrl(loader->UnreachableURL().GetString());
   return frame_object;
